# sketch-converter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  dev_requirements.txt  pyproject.toml  requirements.py  requirements.txt  sketch.py  sketchconverter.spec
.github/workflows/: main.yml  pypi-release.yml
image/: Processing.py
sketch-converter/: cli.py
sketch_converter/: __init__.py  cli.py  sketch.py
sketchconverter/: cli.py  sketch.py
