[tool.poetry]
name = "sketch_converter"
version = "0.1.1"
description = "Converter your picture into sketch with just one line of command"
authors = ["Onuralp SEZER <thunderbirdtr@fedoraproject.org>","Samyak Jain <samyak.jn11@gmail.com>",]
maintainers = [
    "Samyak Jain <samyak.jn11@gmail.com>",
    "Onuralp SEZER <thunderbirdtr@fedoraproject.org>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samyak-jn/sketch-converter"
repository = "https://github.com/samyak-jn/sketch-converter"
documentation = "https://github.com/samyak-jn/sketch-converter/blob/main/README.md"
packages = [{include = "sketch_converter"}]
keywords = ["opencv","sketch-converter","sketch","camera","image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
opencv-python = "^4.7.0.68"
numpy = "^1.24.1"
colorama = "^0.4.6"
commonmark = "^0.9.1"
pygments = "^2.14.0"
rich = "^13.3.1"
shellingham = "^1.5.0.post1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
black = "^22.12.0"
mypy = "^0.991"
requests = "^2.28.2"
ruff = "^0.0.238"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sketch-converter = "sketch_converter.cli:app"
